# cc-feishu

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  MIGRATION.md  MIGRATION_COMPLETE.md  README.md  TODO.md  ecosystem.config.js  package-lock.json  package.json  pyproject.toml  test_dispatch.py  test_feishu.py  test_minimal.py  test_monkey.py  test_session_notification.py  test_websocket.py  tsconfig.json
.claude/: settings.local.json
apps/python/: .env.example  .gitignore  CLAUDE.md  INSTALL.md  README.md  pyproject.toml
apps/python/scripts/: start_service.bat
apps/python/src/bot/: chat_manager.py
apps/python/src/config/: __init__.py
apps/python/src/handlers/: message_handler.py
apps/python/src/utils/: logger.py
apps/python/tests/: test_session_notification.py
docs/: CLI_PERMISSION_RULES.md  DECISIONS.md  PROGRESS.md  PROTOCOL_SPEC.md  PYTHON_SDK_ANALYSIS.md  PYTHON_TYPESCRIPT_RUNTIME_BOUNDARY_NOTES.md  README.md  SESSION_NOTIFICATION.md  STDIO_PROTOCOL.md  STDIO_TESTS_TODO.md  TODO.md  WEBSOCKET_PROTOCOL_REVERSED.md  permission-request-design.md  plan.md  pm2-win11-pidusage-fix.md
scripts/: start_service.bat  start_service.py
src/: index.ts  main.py
tests/: README.md  cd-create-missing-relative-dir.test.ts  chat-manager-idle-reclaim.test.ts  chat-manager-session-decision.test.ts  codex-agent.test.ts  codex-app-server-rpc.test.ts  codex-app-server-smoke.ts  codex-launch-config.test.ts  codex-minimal-session.test.ts  codex-resume-enabled.test.ts  config-access.test.ts  config.test.ts  continue-without-session.ts  message-intake.test.ts  (+23 more)
(+134 files in other folders)
